--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mountain Climb Game</title>
     <link rel="stylesheet" href="style.css">
-    <title>Tap to Climb Game</title>
 </head>
 <body>
     <div class="game-container">
-        <h1>Tap to Climb the Mountain!</h1>
-        <div id="current-mountain">Current Mountain: None</div>
-        <div id="score">Score: 0</div>
-        <button id="tap-button">Tap to Climb</button>
-        <div id="unlocked-message"></div>
+        <h1>Mountain Climb Game</h1>
+        <p id="current-mountain">Current Mountain: None</p>
+        <p id="score">Score: 0</p>
+        <button id="climb-button">Tap to Climb!</button>
+        <p id="unlocked-message"></p>
     </div>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
