--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <div class="game-container">
         <h1>Mountain Climb Game</h1>
-        <p id="current-mountain">Current Mountain: None</p>
-        <p id="score">Score: 0</p>
+        <div class="info">
+            <p id="current-mountain">Current Mountain: None</p>
+            <p id="score">Score: 0</p>
+        </div>
         <button id="climb-button">Tap to Climb!</button>
         <p id="unlocked-message"></p>
     </div>
