--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mountain Climb Game</title>
+    <!-- Link to CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,6 +17,8 @@
         <button id="climb-button">Tap to Climb!</button>
         <p id="unlocked-message"></p>
     </div>
+
+    <!-- Link to JS -->
     <script src="script.js"></script>
 </body>
 </html>
