--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     </div>
 
     <!-- Link to JS -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
+    
 </body>
 </html>
